# external_local_planner

./: CMakeLists.txt  LICENSE  README.md  blp_plugin.xml  package.xml
include/external_local_planner/: external_local_planner_ros.h
src/: external_local_planner_ros.cpp
